<resources>
    <string name="app_name">Blog App</string>
    <string name="submit_post">Submit Post</string>
    <string name="post_description">Post Description....</string>
    <string name="post_title">Post Title....</string>
    <string name="upload_image">Upload Image</string>
    <string name="login">Login</string>
    <string name="password">Password...</string>
    <string name="username_hint">UserName...</string>
    <string name="need_an_account">Need an Account?</string>
    <string name="name">Name....</string>
    <string name="email">Email.....</string>
    <string name="password_register">Password....</string>
    <string name="register_text">Register</string>
    <string name="profile_image_setup">Profile Image setup</string>
    <string name="enter_the_name_for_display">Enter the Name for Display</string>
    <string name="submit_btn">Submit</string>
</resources>
