<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.example.arsalankhan.blogapp.RegisterUser">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/RegisterUserName"
        android:layout_marginTop="20dp"
        android:hint="@string/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/RegisterUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/RegisterUserEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/email" />

    <Button
        android:text="@string/register_text"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RegisterUserPassword"
        android:layout_centerHorizontal="true"
        android:onClick="RegisterUser"
        android:id="@+id/RegisterBtn" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/RegisterUserPassword"
        android:layout_marginTop="18dp"
        android:hint="@string/password_register"
        android:layout_below="@+id/RegisterUserEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
