<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.example.arsalankhan.blogapp.SetupAccount">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/default_image"
        android:layout_marginTop="14dp"
        android:id="@+id/setupImageBtn"
        android:background="#00ffffff"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/profile_image_setup" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/setupImageBtn"
        android:layout_centerHorizontal="true"
        android:id="@+id/setupNameField"
        android:hint="@string/enter_the_name_for_display" />

    <Button
        android:text="@string/submit_btn"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/setupSubmitBtn" />
</RelativeLayout>
